# simple_main

./: Cargo.toml  README.md
src/: bin.rs  lib.rs
