[package]
name = "simple_main"
version = "0.1.0"
authors = ["German Molina <germolinal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mylib"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/bin.rs"

[dependencies]
communication_traits = { path = "../communication_traits" }
building_model = { path = "../building_model" }
people = { path = "../people" }
calendar = { path = "../calendar" }
weather = { path = "../weather" }
multiphysics_model = { path = "../physics/multiphysics_model" }

[dev-dependencies]
geometry3d = {path = "../geometry3d"}
schedule = { path = "../schedule" }
